
@startmindmap performance_test_inspection_entrypoints
* Performance Test
** Define the strategy in TestTask
*** LifeCycle
****:
TEST_STARTED
TEST_FINISHED
TEST_FAILED
TEST_RUN_STARTED
TEST_RUN_FINISHED
;
*** Schedule
** Call inspect() method in a test case
*** Hydra SDK
*** T2C
*** Espresso
@endmindmap
@startjson taps_to_cases_json_with_performance_test_actions
{
  "drivers": [
    {
      "id": "13211FDD400183",
      "platform": "android",
'      Deprecated Name : init
      "setup": {
        "launcherApp": ""
      }
'      Can also add tearDown here to match the device action design
    }
  ],
'  deprecated name: cases
  "actions": [
    {
      "index": 0,
      "driverId": "13211FDD400183",
      "action": {
        "actionType": "inspectBatteryUsage",
        "arguments": {
          "targetApp": "com.microsoft.appmanager",
          "description": "Start LTW",
          "isReset": false
        }
      },
      "isOptional": false
    },
    {
      "index": 1,
      "driverId": "13211FDD400183",
      "action": {
        "actionType": "inspectEventStart",
        "arguments": {
          "description ": "Start LTW"
        }
      },
      "isOptional": false
    },
    {
      "index": 2,
      "driverId": "13211FDD400183",
      "action": {
        "actionType": "inspectMemoryUsage",
        "arguments": {
          "targetApp ": "com.microsoft.appmanager",
          "description ": "Start LTW",
          "isReset": true
        }
      },
      "isOptional": false
    },
    {
      "index": 3,
      "driverId": "13211FDD400183",
      "action": {
        "actionType": "inspectEventEnd",
        "arguments": {
          "description ": "End LTW"
        }
      },
      "isOptional": false
    }
  ]
}
@endjson

@startuml perf_test_class_design
class InspectionStrategy {

    + StrategyType strategyType;

    // if the strategyType == TEST_LIFECYCLE
    + List<WhenType> when;

    // if the strategyType == TEST_SCHEDULE
    + long interval;
    + TimeUnit intervalUnit;
}

interface PerformanceTestListener {
    void testStarted();
    void testFinished();
    void testFailure();
    void testRunStarted();
    void testRunFinished();
}

class PerformanceTestManagementService {
    Map<String, List<ScheduledFuture<?>>> inspectPerformanceTimerMap
    Map<String, List<InspectionStrategy>> testLifeCycleStrategyMap
}

AndroidBatteryInspector -up--o PerformanceTestManagementService
AndroidMemoryInfoInspector -up--o PerformanceTestManagementService
AndroidMemoryDumpInspector -up--o PerformanceTestManagementService
WindowsBatteryInspector -up--o PerformanceTestManagementService
WindowsMemoryInspector -up--o PerformanceTestManagementService
EventTimeInspector -up--o PerformanceTestManagementService

PerformanceTestManagementService -> InspectionStrategy
PerformanceTestManagementService -u-|> PerformanceTestListener

PerformanceTestManagementService -left-o TestRunner
AppiumListener -d->  PerformanceTestListener
Junit5Listener -d->  PerformanceTestListener
EspressoTestInfoProcessorListener  -d->  PerformanceTestListener
@enduml

@startuml espresso_performance_test_design
class EspressoPerformanceParser {
    void processNewLines()
}
EspressoPerformanceParser --|> InstrumentationResultParser
TestRunner <|-- EspressoRunner
EspressoRunner -> EspressoPerformanceParser
EspressoPerformanceParser -> PerformanceInspectionService
@enduml

@startuml performance_event_test_sequence
TestRunner -> PerformanceInspection : createEventStartInspection()
activate PerformanceInspection
PerformanceInspection -> TestRunner : EventStartInspection
deactivate PerformanceInspection
TestRunner -> PerformanceTestManagementService : inspect(EventStartInspection)
PerformanceTestManagementService -> EventTimeInspector : inspect(EventStartInspection)
activate EventTimeInspector
EventTimeInspector -> PerformanceTestManagementService : PerformanceInspectionResult
deactivate EventTimeInspector
TestRunner -> PerformanceInspection : createEventEndInspection()
activate PerformanceInspection
PerformanceInspection -> TestRunner : EventEndInspection
deactivate PerformanceInspection
TestRunner -> PerformanceTestManagementService : inspect(EventEndInspection)
PerformanceTestManagementService -> EventTimeInspector : inspect(EventEndInspection)
activate EventTimeInspector
EventTimeInspector -> PerformanceTestManagementService : PerformanceInspectionResult
deactivate EventTimeInspector
TestRunner -> PerformanceTestManagementService : analyse()
PerformanceTestManagementService -> EventTimeParser : parse(PerformanceTestResult)
activate EventTimeParser
EventTimeParser -> PerformanceTestManagementService : PerformanceTestResult
deactivate EventTimeParser
note right
  Parse the event time from "start" to "end"
end note
@enduml

@startuml test_notify_uml
class TestTask {
    String notifyURL
}

class TestNotification {
    String reportLink;
    String testTaskId;
    Object content;
    String testStartTime;
}

class TestNotifier {
    + void sendTestNotification(String notifyURL, TestNotification notification, Logger logger)
}

interface PerformanceTestListener {
}

PerformanceTestManagementService -u-> TestTask
TestNotifier o- PerformanceTestManagementService
TestNotifier -u-> TestNotification
PerformanceTestManagementService -d-|> PerformanceTestListener
@enduml

@startuml test_notify_component
skinparam componentStyle rectangle
package "Hydra Lab Agent" {
    component "Performance Management" {
        [TestNotifier]
        [PerformanceTestManagementService]
    }
}

cloud "3rd Party Notify Service" as Notify {
    component "Azure Function" as Azure {
        [Teams Message]
        [Email]
    }
}

[TestNotifier] ...>() HTTP : POST
Notify -l- HTTP

@enduml

